@@ -1,3 +1,10 @@
+2004-03-21  Jon Schewe  <jpschewe@mtu.net>
+
+	* src/resources/challenge-region-2003.xml: Removed language used (914627).
+
+	* src/fll/xml/GenerateDB.java (generateDB): Removed numMedals from
+	the system (847499).
+
 2004-03-15  Jon Schewe  <jpschewe@mtu.net>
 
 	* src/fll/web/admin/Judges.java (generatePage): Made all forms
